--- a/assets/css/stye.css
+++ b/assets/css/stye.css
@@ -267,7 +267,8 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right no-repeat;
+  /* background: url("../img/bg-1.jpg") top right no-repeat; */
+  background-color: #0c1726;
   background-size: cover;
   position: relative;
 }
@@ -280,7 +281,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: rgba(255, 255, 255, 0.8);
+  /* background: rgba(255, 255, 255, 0.8); */
   position: absolute;
   bottom: 0;
   top: 0;
@@ -293,11 +294,12 @@ h6 {
   font-size: 64px;
   font-weight: 700;
   line-height: 56px;
-  color: #45505b;
+  color: #ffffff;
 }
 
 #hero p {
-  color: #45505b;
+  color: #ffffff;
+  /* color: #45505b; */
   margin: 15px 0 0 0;
   font-size: 26px;
   font-family: "Poppins", sans-serif;
@@ -315,14 +317,14 @@ h6 {
 #hero .social-links a {
   font-size: 24px;
   display: inline-block;
-  color: #45505b;
+  color: #0563bb;  
   line-height: 1;
   margin-right: 20px;
   transition: 0.3s;
 }
 
 #hero .social-links a:hover {
-  color: #0563bb;
+  color: #45505b;
 }
 
 @media (max-width: 992px) {
@@ -1144,8 +1146,9 @@ section {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #f7f8f9;
-  color: #45505b;
+  /* background: #f7f8f9; */
+  background-color: #0c1726;
+  color: #ffffff;
   font-size: 14px;
   text-align: center;
   padding: 30px 0;
